# fastapi-observability

./: .gitignore  Pipfile  docker-compose.yaml  k6-script.js  locustfile.py  readme.md  request-script.sh  requirements.txt  trace.sh
.github/: FUNDING.yml
.github/workflows/: build.yaml
etc/: dashboards.yaml
etc/dashboards/: fastapi-observability.json
etc/grafana/: datasource.yml
etc/prometheus/: prometheus.yml
etc/tempo/: tempo.yml
fastapi_app/: Dockerfile  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  utils.py
fastapi_app_plain/: main.py  utils.py
images/: observability-arch.drawio
