[project]
name = "fastapi-app"
version = "0.1.0"
description = "FastAPI Observability Demo Application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "opentelemetry-distro>=0.54b0",
    "opentelemetry-exporter-otlp>=1.33.0",
    "opentelemetry-instrumentation-fastapi>=0.54b0",
    "opentelemetry-instrumentation-logging>=0.54b0",
    "prometheus-client>=0.21.1",
    "uvicorn>=0.34.2",
]
